# PME-SI

./: .env  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  DOCUMENTATION_COMPLETE_ABSERVICE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
apps/accounts/: adapters.py  admin.py  apps.py  emails.py  forms.py  models.py  signals.py  team_views.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  validators.py  views.py
apps/crm/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/hr/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/invoicing/: admin.py  apps.py  emails.py  forms.py  models.py  pdf.py  services.py  signals.py  urls.py  views.py
apps/notifications/: models.py  services.py  urls.py  views.py
apps/permissions/: apps.py  decorators.py  mixins.py  models.py  services.py
apps/sales/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/search/: apps.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
deploy/: backup.sh  deploy.sh  setup-server.sh
docker/: Dockerfile  Dockerfile.dev
docker/nginx/: nginx.conf
requirements/: base.txt  development.txt  production.txt  test.txt
static/css/: components.css
templates/: base.html
templates/account/: login.html  signup.html
templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  profile.html  (+2 more)
tests/: conftest.py
(+142 files in other folders)
